# sprout_exercise

./: .gitignore  Makefile  README.md  docker-compose.yml
src/backend/: Dockerfile  pyproject.toml
src/backend/app/: main.py
src/backend/app/api/: deps.py
src/backend/app/api/api_v1/: api.py
src/backend/app/api/api_v1/endpoints/: posts.py
src/backend/app/core/: config.py
src/backend/app/crud/: __init__.py  base.py  crud_post.py
src/backend/app/db/: base.py  init_db.py  session.py
src/backend/app/logic/: __init__.py  ml.py  ml_api.py  post.py
src/backend/app/models/: post.py
src/backend/app/schemas/: __init__.py  post.py  sentence.py
src/backend/app/tests/: conftest.py
src/backend/app/tests/functional/: test_post.py
src/backend/app/tests/integration/api_v1/: test_posts.py
src/backend/app/tests/unit/: test_logic.py
src/ml/: Dockerfile  pyproject.toml
src/ml/app/api/api_v1/: api.py
src/ml/app/api/api_v1/endpoints/: sentences.py
src/ml/app/core/: config.py
src/ml/app/ml/: __init__.py  sentence.py
src/ml/app/schemas/: __init__.py  sentence.py
