[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Noel Wilson <jwnwilson88@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
SQLAlchemy = "^1.4.41"
requests = "^2.28.1"
tenacity = "^8.1.0"
requests-futures = "^1.0.0"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
pytest = "^7.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
