[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Noel Wilson <jwnwilson88@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
profanity-filter = "^1.3.3"

[tool.poetry.dev-dependencies]
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
